# HPCC-Platform

./: CMakeLists.txt  TestDataInput.java  TestDataInput2.java  TestDataOutput.java  TestDataOutput2.java  TestInputOutput.java  TestInputOutput2.java  TestInputOutputString.java  first_test.ecl  first_test.kel
cmake_modules/: FindLIBMEMCACHED.cmake  FindSVN.cmake  commonSetup.cmake  share.cmake
common/: CMakeLists.txt
common/deftype/: defvalue.cpp
common/environment/: environment.cpp  environment.hpp
common/fileview2/: fvresultset.cpp  fvresultset.ipp
common/remote/: rmtssh.cpp
common/thorhelper/: CMakeLists.txt  thorsoapcall.cpp  thorxmlwrite.cpp  thorxmlwrite.hpp
common/workunit/: referencedfilelist.cpp  workunit.cpp  workunit.hpp  workunit.ipp  wuattr.cpp  wujobq.cpp  wujobq.hpp
common/wuwebview/: wuwebview.cpp
dali/: CMakeLists.txt
dali/base/: dacoven.cpp  dacoven.hpp  dacsds.cpp  dacsds.ipp  dadfs.cpp  dadfs.hpp  dadiags.cpp  dadiags.hpp  dafdesc.cpp  dafdesc.hpp  dasds.cpp  dasds.hpp  dautils.cpp  dautils.hpp
dali/daliadmin/: CMakeLists.txt  daadmin.cpp  daadmin.hpp  daliadmin.cpp
dali/dalidiag/: dalidiag.cpp
dali/datest/: dfuwutest.cpp
dali/dfu/: dfurun.cpp  dfuwu.cmake  dfuwu.cpp  dfuwu.hpp  dfuwuhelpers.cpp  dfuwuhelpers.hpp
dali/dfuXRefLib/: XRefNodeManager.cpp  XRefNodeManager.hpp
dali/ft/: daftformat.cpp  daftformat.ipp  dalift.cmake  filecopy.cpp
dali/queueadmin/: CMakeLists.txt  queueadmin.cpp
dali/sasha/: CMakeLists.txt  saarch.cpp  sacmd.cpp  sacmd.hpp
dali/server/: daserver.hpp
deployment/agent/: CMakeLists.txt  dpagent.cpp  dpagent.hpp  main.cpp
deployment/agentlib/: CMakeLists.txt  dpagentbase.hpp
deployment/configgen/: CMakeLists.txt
deployment/configutils/: CMakeLists.txt
deployment/deploy/: CMakeLists.txt
deployment/deployutils/: CMakeLists.txt  deployutils.cpp
deployment/envgen/: CMakeLists.txt
devdoc/kw/: docker.txt
dockerfiles/: buildall-common.sh
dockerfiles/platform-build/: Dockerfile
dockerfiles/platform-core/: Dockerfile
ecl/agentexec/: agentexec.cpp
ecl/eclagent/: eclagent.cpp  eclgraph.cpp
ecl/eclccserver/: eclccserver.cpp
ecl/eclcmd/: CMakeLists.txt  ecl.cpp  eclcmd_common.hpp  eclcmd_core.cpp  eclcmd_shell.cpp
ecl/eclplus/: CMakeLists.txt  DeleteHelper.ipp  DumpHelper.cpp  DumpHelper.ipp  ViewHelper.cpp  eclplus.cpp  eclplus.hpp  main.cpp
ecl/wutest/: wutest.cpp
esp/: CMakeLists.txt  mine.txt
esp/clients/wsdfuaccess/: CMakeLists.txt  sourcedoc.xml  wsdfuaccess.cpp  wsdfuaccess.hpp
esp/esdllib/: esdl_def.cpp  esdl_def.hpp  esdl_transformer2.cpp  esdl_transformer2.ipp
esp/esplib/: logginglib.hpp  respool.hpp
esp/files/: eclwatch.htm  eclwatch_dojo.htm  eclwatch_jquery.htm  eclwatch_yui.htm  esp_app_tree.html  esp_genesis.html  gen_form.js  joblist.js  jobqueue.js  logout.js  userlogon.html
esp/kw/: docker_hpcc.txt  hpcc_notes.txt
esp/logging/: CMakeLists.txt  LogFailSafe.cpp  LogFailSafe.hpp  loggingcommon.hpp  logthread.cpp  logthread.hpp
esp/logging/loggingagent/mysqlloggingagent/: CMakeLists.txt  dbfieldmap.cpp  dbfieldmap.hpp  mysqllogagent.cpp  mysqllogagent.hpp
esp/pdmlib/: CMakeLists.txt  pdmlibshare.hpp
esp/platform/: CMakeLists.txt  EspErrors.hpp  espbinding.hpp  espcache.cpp  espcache.hpp  espcfg.cpp  espcfg.ipp  espcontext.cpp  espcontext.hpp  espp.cpp  espp.hpp  espprotocol.cpp  espprotocol.hpp  espsession.ipp  sechandler.cpp  txsummary.hpp
esp/protocols/http/: CMakeLists.txt
esp/scm/: CMakeLists.txt  additional.cmake  esp.ecm  esploggingservice.ecm  espscm.cmake  smcscm.cmake  ws_access.ecm  ws_container.ecm  ws_dali.ecm  ws_decoupledlogging.ecm  ws_dfu.ecm  ws_dfuXref.ecm  ws_echo_test.ecm  ws_esdlconfig.ecm  ws_espcontrol.ecm  ws_fileio.ecm  ws_fs.ecm  ws_genesis.ecm  ws_loggingservice.ecm  ws_machine.ecm  ws_smc.ecm  ws_sql.ecm  ws_topology.ecm  ws_tranlogging.ecm  ws_workunits.ecm  ws_workunits_req_resp.ecm  ws_workunits_struct.ecm
esp/services/: CMakeLists.txt
esp/services/ws_echo_test/: CMakeLists.txt  ws_echotestplugin.cpp  ws_echotestservice.cpp  ws_echotestservice.hpp
esp/services/ws_genesis/: CMakeLists.txt  genesis_errors.h  ws_genesisHelper.cpp  ws_genesisPlugin.cpp  ws_genesisService.cpp  ws_genesisService.hpp
esp/services/ws_orbiz/: CMakeLists.txt  mysqldatamanager.cpp  mysqldatamanager.hpp  orbizdatamanager.cpp  orbizdatamanager.hpp  ws_orbizplugin.cpp  ws_orbizservice.cpp  ws_orbizservice.hpp
esp/services/ws_pdm/: CMakeLists.txt  ws_pdmplugin.cpp  ws_pdmservice.cpp  ws_pdmservice.hpp
esp/src/: stub_dmc.htm
esp/svnlib/: CMakeLists.txt  MySVN.cpp  MySVN.hpp  SVNContextListener.cpp  SVNContextListener.hpp  SVNObjects.cpp  SVNObjects.hpp  client_diff.cpp  client_ls.cpp  m_check.hpp  targets.cpp
esp/svnlib/svncpp/: annotate_line.hpp  dirent.hpp  exception.hpp  log_entry.hpp  revision.hpp  string_wrapper.hpp
esp/test/: CMakeLists.txt
esp/tools/: CMakeLists.txt
esp/tools/esplogreader/: CMakeLists.txt  README.txt  esplogreader.install  esplogreader.uninstall  main.cpp  sourcedoc.xml
esp/xslt/: CMakeLists.txt  appframe1.xsl  esdl2ecl.xslt  espheader.xsl  gen_form.xsl  nav1.xsl  newappframe.xsl  newnav.xsl  soap_page.xsl  userlogon.xsl  userlogout.xsl
helm/hpcc/: values.yaml
plugins/cassandra/: CMakeLists.txt  cassandrawu.cpp
plugins/fileservices/: fileservices.cpp
plugins/workunitservices/: CMakeLists.txt  workunitservices.cpp
roxie/ccd/: ccdcontext.cpp  ccdmain.cpp  ccdstate.cpp
roxie/udplib/: udplib.hpp  udptrr.cpp  udptrs.cpp  utmulticast.cmake  utmulticast.cpp  uttest.cpp
rtl/eclrtl/: eclrtl.cpp
system/: CMakeLists.txt
system/jlib/: jdebug.cpp  jlog.hpp  jmd5.cpp  jmd5.hpp  jmisc.cpp  jmisc.hpp  jptree.cpp  jstats.cpp  jstring.cpp  jstring.hpp  jtime.hpp  jutil.cpp  jutil.hpp
system/mysql/: CMakeLists.txt  mysql.cpp  mysql.hpp  pool.cpp
system/security/: CMakeLists.txt
system/svnlib/: CMakeLists.txt  MySVN.cpp  MySVN.hpp  SVNContextListener.cpp  SVNContextListener.hpp  SVNObjects.cpp  apr.cpp  (+20 more)
testing/unittests/: CMakeLists.txt  cryptotests.cpp  sashatests.cpp
workspaces/: CMakeLists.txt
(+711 files in other folders)
